# mtfg-rs

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build-win.sh  build.rs  build.sh  default.nix  flake.nix  host_build.txt  log4rs.yaml  mtfg-rs.sh  opencv-win.nix  result  test-flake.sh
.cargo/: config.toml
.github/workflows/: check.yml
contrib/: default.nix  flake.nix
contrib/Installer/: setup_linux.sh
contrib/OpenFunscripter/extension/: main.lua
contrib/OpenFunscripter/remote-extension/: main.lua
contrib/nix-win/: flake.nix
contrib/nix01/: default.nix  flake.nix
contrib/nix02/: flake.nix
src/: args.rs  ffmpeg.rs  ffmpeg_stream.rs  funscript.rs  interpolate.rs  logging.rs  main.rs  opencv_tracker.rs  simplify.rs  tracker.rs  trajectories.rs  ui.rs
