[package]
name = "mtfg-rs"
version = "0.0.3"
edition = "2021"
description = "Motion Tracking Funscript Generator"

[dependencies]
bytes = "1.3"
clap = { version = "4", features = ["derive"] }
fortify = "0.4"
fraction = "0.13"
futures = "0.3"
futures-util = "0.3"
image = "0.24"
indoc = "1.0"
log = "0.4"
log4rs = "1.2"
mint = "0.5"
opencv = { version = "0.80" }
ramer_douglas_peucker = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
mentat = "0.0.4"
tempdir = "0.3"

# bindings-generator strict dependencies
libc = "=0.2.139"
once_cell = "=1.17.0"
rgb = "=0.8.34"
matches = "=0.1.9"
cc = "=1.0.78"
dunce = "=1.0.3"
jobserver = "=0.1.25"
pkg-config = "=0.3.26"
semver = "=1.0.16"
bytemuck = "=1.12.3"
clang-sys = "=1.4.0"
regex = "=1.7.0"
glob = "=0.3.0"
regex-syntax = "=0.6.28"
